--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -7,7 +7,7 @@ $borderColor ?= #BFBFBF
 $codeBgColor = #414862
 
 // layout
-$navbarHeight ?= 3.6rem
+$navbarHeight = 4.4rem
 $sidebarWidth ?= 20rem
 $contentWidth ?= 740px
 $homePageWidth ?= 960px
