--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -97,54 +97,6 @@ a:hover {
       margin-left -1.2em
       padding-right 0
 
-  // .sidebar > .sidebar-links {
-  //   padding: 2.5rem 0;
-  // }
-
-  // .sidebar-group-items,
-  // .sidebar-group.is-sub-group > .sidebar-heading {
-  //   font-size: .95rem;
-  // }
-
-  // // mimic clickable categories
-  // .sidebar-group.is-sub-group.collapsable > .sidebar-heading:not(.clickable) {
-  //   opacity: 1;
-  // }
-  // .sidebar-group.is-sub-group.collapsable > .sidebar-heading:not(.clickable):hover {
-  //   color: var(--docs-nav-link-accent);
-  //   cursor: pointer;
-  // }
-
-  // .sidebar-group a.sidebar-link,
-  // .sidebar-group.is-sub-group > .sidebar-heading {
-  //   padding-left: 1.25rem;
-  // }
-
-  // a.sidebar-link,
-  // .sidebar-heading.clickable {
-  //   color: var(--docs-nav-link);
-  // }
-
-  // a.sidebar-link:focus,
-  // a.sidebar-link:hover,
-  // .sidebar-heading.clickable:focus,
-  // .sidebar-heading.clickable:hover {
-  //   color: var(--docs-nav-link-accent);
-  // }
-
-  // a.sidebar-link.active,
-  // .sidebar-heading.clickable.active,
-  // .sidebar-heading.clickable.router-link-exact-active {
-  //   color: var(--docs-nav-link-active);
-  //   font-weight: 600;
-  //   border-color: transparent;
-  // }
-
-  // a.sidebar-link.active,
-  // .sidebar-group.depth-1 > .sidebar-heading.clickable.router-link-exact-active  {
-  //   border-color: var(--docs-primary);
-  // }
-
   .arrow.left {
     border-right-color: var(--docs-neutral-500);
   }
@@ -163,9 +115,11 @@ a:hover {
 
   .page-nav,
   .page-edit,
-  .theme-default-content:not(.custom) {
-    max-width: 780px;
+  .theme-default-content:not(.custom),
+  .footer .inner {
+    max-width: 800px;
   }
+
   hr {
     border-color: var(--docs-body-border-light);
   }
@@ -197,6 +151,7 @@ a:hover {
     border-radius: var(--docs-border-radius);
     color: var(--docs-pre-text);
     background-color: var(--docs-pre-bg);
+    font-size: var(--docs-font-size-s);
   }
 
   pre code {
@@ -211,14 +166,6 @@ a:hover {
   div[class*="language-"] {
     background: transparent;
     border-radius: var(--docs-border-radius);
-  }
-
-  tr:nth-child(2n) {
-    background-color: transparent;
-  }
-
-  .custom-block {
-    background-color: var(--docs-bg-dark);
   }
 
   .custom-block .custom-block-title {
@@ -243,9 +190,9 @@ a:hover {
   }
 
   .custom-block.tip {
-    color: var(--docs-info-text);
-    background: var(--docs-info);
-    border-color: var(--docs-info-bg-hover);
+    color: var(--docs-body-text);
+    background: var(--docs-neutral-10);
+    border-color: var(--docs-neutral-25);
   }
 
   .page-edit .edit-link a,
@@ -262,6 +209,41 @@ a:hover {
 
   .page-nav .inner {
     border-top-color: var(--docs-body-border-light);
+  }
+
+  .tabs-component {
+    margin: var(--docs-space-m) 0;
+  }
+
+  .tabs-component-tabs {
+    margin-top: 0;
+  }
+
+  .tabs-component-tab {
+    display: inline-block;
+    color: var(--docs-body-text);
+    background-color: var(--docs-body-bg);
+    border-color: var(--docs-body-border-medium);
+    border: none;
+    font-size: inherit;
+    font-weight: inherit;
+  }
+
+  .tabs-component-tab-a {
+    padding: 0;
+    margin-right: var(--docs-space-m);
+  }
+
+  .tabs-component-panels {
+    background-color: var(--docs-body-bg);
+    border-color: var(--docs-body-border-medium);
+    border: none;
+    padding: 0;
+  }
+
+  .tabs-component-tab.is-active {
+    color: var(--docs-body-link-accent);
+    transform: none;
   }
 
   .ytEmbed {
