Improve sidebar styling

--- a/docs/.vuepress/styles/footer.styl
+++ b/docs/.vuepress/styles/footer.styl
@@ -28,7 +28,7 @@
 .footer-columns h5,
 .footer-columns h6 {
   margin: var(--docs-space-m) 0;
-  font-weight: var(--docs-font-weight-bold);
+  font-weight: var(--docs-font-weight-semibold);
 }
 
 .footer-columns ul {
