Set selection styles

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -9,6 +9,10 @@
 *::after
   box-sizing border-box
 
+::selection
+  color var(--docs-selection-text)
+  background-color var(--docs-selection-bg)
+
 @media (prefers-reduced-motion reduce)
   *
     -webkit-animation none !important
