--- a/docs/.vuepress/styles/variables.styl
+++ b/docs/.vuepress/styles/variables.styl
@@ -33,6 +33,9 @@
   --docs-neutral-75: #606060;
   --docs-neutral-90: #161616;
 
+  --docs-selection-bg: var(--docs-neutral-25);
+  --docs-selection-text: var(--docs-white);
+
   --docs-body-bg: var(--docs-white);
   --docs-body-heading: var(--docs-black);
   --docs-body-text: var(--docs-neutral-75);
