Attempt to fix font issue

--- a/docs/.vuepress/styles/fonts.styl
+++ b/docs/.vuepress/styles/fonts.styl
@@ -3,8 +3,7 @@
   font-family: 'Manrope';
   font-style: normal;
   font-weight: 400;
-  src: url('/fonts/manrope-v4-latin-regular.woff2') format('woff2'),
-       url('/fonts/manrope-v4-latin-regular.woff') format('woff');
+  src: url('/fonts/manrope-400.woff2') format('woff2');
 }
 
 /* manrope-600 - latin */
@@ -12,8 +11,7 @@
   font-family: 'Manrope';
   font-style: normal;
   font-weight: 600;
-  src: url('/fonts/manrope-v4-latin-600.woff2') format('woff2'),
-       url('/fonts/manrope-v4-latin-600.woff') format('woff');
+  src: url('/fonts/manrope-600.woff2') format('woff2');
 }
 
 // https://google-webfonts-helper.herokuapp.com/fonts/ibm-plex-mono?subsets=latin
@@ -22,6 +20,5 @@
   font-family: 'IBM Plex Mono';
   font-style: normal;
   font-weight: 400;
-  src: url('/fonts/ibm-plex-mono-v6-latin-regular.woff2') format('woff2'),
-       url('/fonts/ibm-plex-mono-v6-latin-regular.woff') format('woff');
+  src: url('/fonts/ibm-plex-mono-400.woff2') format('woff2')
 }
