Import Manrope from Google Fonts

--- a/docs/.vuepress/styles/fonts.styl
+++ b/docs/.vuepress/styles/fonts.styl
@@ -1,18 +1,20 @@
-// https://google-webfonts-helper.herokuapp.com/fonts/manrope?subsets=latin
-@font-face {
-  font-family: 'Manrope';
-  font-style: normal;
-  font-weight: 400;
-  src: url('/fonts/manrope-400.woff2') format('woff2');
-}
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 
-/* manrope-600 - latin */
-@font-face {
-  font-family: 'Manrope';
-  font-style: normal;
-  font-weight: 600;
-  src: url('/fonts/manrope-600.woff2') format('woff2');
-}
+// https://google-webfonts-helper.herokuapp.com/fonts/manrope?subsets=latin
+// @font-face {
+//   font-family: 'Manrope';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url('/fonts/manrope-400.woff2') format('woff2');
+// }
+
+// /* manrope-600 - latin */
+// @font-face {
+//   font-family: 'Manrope';
+//   font-style: normal;
+//   font-weight: 600;
+//   src: url('/fonts/manrope-600.woff2') format('woff2');
+// }
 
 // https://google-webfonts-helper.herokuapp.com/fonts/ibm-plex-mono?subsets=latin
 /* ibm-plex-mono-regular - latin */
