--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -78,6 +78,9 @@ a:hover
     .wrap
     .wrap-border
       flex 1
+    &.no-sidebar
+      .wrap
+        display flex
 
   // Max-width, centered layout
   .wrap
