Update theme colors
Closes #60

--- a/docs/.vuepress/styles/variables.styl
+++ b/docs/.vuepress/styles/variables.styl
@@ -24,7 +24,7 @@
   --docs-black: #000;
   --docs-primary: #0F31F7;
   --docs-accent-teal: #76F3CD;
-  --docs-accent-yellow: #F7C00F;
+  --docs-accent-yellow: #fff200;
   --docs-accent-purple: #711BF7;
 
   --docs-neutral-10: #E6E6E6;
