--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -221,7 +221,7 @@ a:hover
     color var(--docs-secondary-accent)
 
   .page-nav .inner
-    border-top-color var(--docs-body-border-light)
+    border-top var(--docs-border-dashed)
 
   .pagination > li:not(.active) > a
     background-color transparent
