Decrease sidebar width

--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -8,7 +8,7 @@ $codeBgColor = #414862
 
 // layout
 $navbarHeight = 4.4rem
-$sidebarWidth ?= 20rem
+$sidebarWidth ?= 280px
 $contentWidth ?= 740px
 $homePageWidth ?= 960px
 
