Update colors and logo

--- a/docs/.vuepress/styles/variables.styl
+++ b/docs/.vuepress/styles/variables.styl
@@ -26,6 +26,7 @@
   --docs-accent-teal: #76F3CD;
   --docs-accent-yellow: #fff200;
   --docs-accent-purple: #711BF7;
+  --docs-deep-blue: #000628;
 
   --docs-neutral-10: #E6E6E6;
   --docs-neutral-25: #BFBFBF;
@@ -81,10 +82,13 @@
   --docs-neutral-75: #BFBFBF;
   --docs-neutral-90: #E6E6E6;
 
-  --docs-body-bg: var(--docs-black);
+  --docs-body-bg: var(--docs-deep-blue);
   --docs-body-heading: var(--docs-white);
   --docs-body-link: var(--docs-accent-teal);
   --docs-body-link-accent: var(--docs-accent-teal);
+
+  --docs-code-bg: #0f1637;
+  --docs-pre-bg: var(--docs-code-bg);
 }
 
 @media (prefers-color-scheme: dark) {
