--- a/docs/.vuepress/public/css/variables.css
+++ b/docs/.vuepress/public/css/variables.css
@@ -1,75 +1,5 @@
 :root {
-  --docs-primary: #0F31F7;
-  --docs-accent-teal: #76F3CD;
-  --docs-deep-blue: #000628;
-
-  --docs-neutral-10: #E6E6E6;
-  --docs-neutral-25: #BFBFBF;
-  --docs-neutral-50: #808080;
-  --docs-neutral-75: #606060;
-  --docs-neutral-90: #161616;
-
-  --docs-selection-bg: var(--docs-neutral-25);
-  --docs-selection-text: var(--docs-white);
-
-  --docs-body-bg: var(--docs-white);
-  --docs-body-heading: var(--docs-black);
-  --docs-body-text: var(--docs-neutral-75);
-  --docs-body-link: var(--docs-primary);
-  --docs-body-link-accent: var(--docs-primary);
-  --docs-body-border-light: var(--docs-neutral-10);
-  --docs-body-border-medium: var(--docs-neutral-25);
-  --docs-border-dashed: 1px dashed var(--docs-body-border-medium);
-
-  --docs-cta-text: var(--docs-white);
-  --docs-cta-bg: linear-gradient(291.12deg, #0F31F7 23.78%, #76F3CD 102.85%);
-
-  --docs-header-text: var(--docs-body-text);
-  --docs-header-bg: var(--docs-body-bg);
-  --docs-header-link: var(--docs-body-link);
-  --docs-header-link-accent: var(--docs-body-link-accent);
-
-  --docs-sidebar-text: var(--docs-body-text);
-  --docs-sidebar-bg: var(--docs-body-bg);
-  --docs-sidebar-link: var(--docs-body-text);
-  --docs-sidebar-link-accent: var(--docs-body-link-accent);
-
-  --docs-code-text: inherit;
-  --docs-code-bg: var(--docs-neutral-10);
-  --docs-pre-text: var(--docs-white);
-  --docs-pre-bg: #414862;
-}
-
-:root[data-theme="dark"] {
-  --docs-primary: var(--docs-accent-teal);
-
-  --docs-neutral-10: #161616;
-  --docs-neutral-25: #606060;
-  --docs-neutral-50: #808080;
-  --docs-neutral-75: #BFBFBF;
-  --docs-neutral-90: #E6E6E6;
-
-  --docs-body-bg: var(--docs-deep-blue);
-  --docs-body-heading: var(--docs-white);
-
-  --docs-code-bg: #0f1637;
-  --docs-pre-bg: var(--docs-code-bg);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root:not([data-theme]) {
-    --docs-primary: var(--docs-accent-teal);
-
-    --docs-neutral-10: #161616;
-    --docs-neutral-25: #606060;
-    --docs-neutral-50: #808080;
-    --docs-neutral-75: #BFBFBF;
-    --docs-neutral-90: #E6E6E6;
-
-    --docs-body-bg: var(--docs-deep-blue);
-    --docs-body-heading: var(--docs-white);
-
-    --docs-code-bg: #0f1637;
-    --docs-pre-bg: var(--docs-code-bg);
-  }
+  --docs-primary-light: #0F31F7;
+  --docs-primary-dark: #76F3CD;
+  --docs-dark: #000628;
 }
