Fix note colors
Fixes #91

--- a/docs/.vuepress/public/css/variables.css
+++ b/docs/.vuepress/public/css/variables.css
@@ -3,7 +3,8 @@
   --docs-primary-dark: #76F3CD;
   --docs-dark: #000628;
 
-  --docs-note-text: var(--docs-white) !important;
+  --docs-note-text: var(--docs-black) !important;
+  --docs-note-bg: #F5F7FF !important;
   --docs-code-bg: #E6EAFE;
   --docs-pre-bg: #020A36;
 }
@@ -11,11 +12,15 @@
 :root[data-theme="dark"] {
   --docs-code-bg: #06463C;
   --docs-pre-bg: #002547;
+  --docs-note-text: var(--docs-white) !important;
+  --docs-note-bg: var(--docs-pre-bg) !important;
 }
 
 @media (prefers-color-scheme: dark) {
   :root:not([data-theme]) {
     --docs-code-bg: #06463C;
     --docs-pre-bg: #002547;
+    --docs-note-text: var(--docs-white) !important;
+    --docs-note-bg: var(--docs-pre-bg) !important;
   }
 }
